adding  the   controll  of   common dc details    working  but  with  vesrion auto incrementing   so that we fix  the rest      lster